--- a/ci/pipeline.yml
+++ b/ci/pipeline.yml
@@ -11,7 +11,7 @@ resources:
   type: git
   source:
     uri: git@github.com:pivotal-cf-experimental/kubo-deployment
-    branch: pr-deploy_k8s_ci
+    branch: master
     private_key: {{git-ssh-key}}
 
 - name: git-kubo-release
