Updated github PR repo names
[#140395673]

Signed-off-by: Konstantin Semenov <ksemenov@pivotal.io>

--- a/ci/kubo-deployment-pr.yml
+++ b/ci/kubo-deployment-pr.yml
@@ -14,7 +14,7 @@ resources:
 - name: git-kubo-deployment
   type: pull-request
   source:
-    repo: git@github.com:pivotal-cf-experimental/kubo-deployment
+    repo: pivotal-cf-experimental/kubo-deployment
     base: master
     private_key: {{git-ssh-key}}
     access_token: {{github-token-key}}
