Added URIs for github-pr resources
[#140395673]

Signed-off-by: Oleksandr Slynko <oslynko@pivotal.io>

--- a/ci/kubo-deployment-pr.yml
+++ b/ci/kubo-deployment-pr.yml
@@ -15,6 +15,7 @@ resources:
   type: pull-request
   source:
     repo: pivotal-cf-experimental/kubo-deployment
+    uri: git@github.com:pivotal-cf-experimental/kubo-deployment
     base: master
     private_key: {{git-ssh-key}}
     access_token: {{github-token-key}}
