--- a/ci/kubo-release-pr.yml
+++ b/ci/kubo-release-pr.yml
@@ -21,6 +21,7 @@ resources:
 - name: git-kubo-release
   type: pull-request
   source:
+    uri: git@github.com:pivotal-cf-experimental/kubo-release
     repo: pivotal-cf-experimental/kubo-release
     base: master
     private_key: {{git-ssh-key}}
