Introduce multiple CI environments
[#140395673]

Signed-off-by: Konstantin Semenov <ksemenov@pivotal.io>

--- a/ci/kubo-deployment-pr.yml
+++ b/ci/kubo-deployment-pr.yml
@@ -72,7 +72,6 @@ resources:
 
 jobs:
 - name: claim-lock
-  max_in_flight: 1
   plan:
   - aggregate:
     - get: git-kubo-release
@@ -82,27 +81,45 @@ jobs:
   - put: kubo-lock
     params: { acquire: true }
 
-- name: install-bosh
+- name: set-pr-pending
   plan:
   - get: git-kubo-deployment
-    passed: [ 'claim-lock' ]
-  - get: git-kubo-release
-    passed: [ 'claim-lock' ]
-  - get: kubo-lock
+    version: every
     trigger: true
-    passed: [ 'claim-lock' ]
+    passed: ['claim-lock']
+  - put: git-kubo-deployment
+    params:
+      path: git-kubo-deployment
+      status: pending
+
+- name: install-bosh
+  plan:
+  - aggregate:
+    - get: git-kubo-deployment
+      passed: [ 'claim-lock' ]
+    - get: git-kubo-release
+      passed: [ 'claim-lock' ]
+    - get: kubo-lock
+      version: every
+      trigger: true
+      passed: [ 'claim-lock' ]
   - task: install
     file: git-kubo-deployment/ci/tasks/install-bosh.yml
     params:
       GCP_SERVICE_ACCOUNT: {{gcp-service-account}}
     on_failure:
-      put: slack-alert
-      params:
-        silent: true
-        icon_emoji: ":thumbsdown:"
-        text: |
-          Deploy BOSH failed:
-          https://p-concourse.sys.main.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      aggregate:
+      - put: slack-alert
+        params:
+          silent: true
+          icon_emoji: ":thumbsdown:"
+          text: |
+            Deploy BOSH failed:
+            https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      - put: git-kubo-deployment
+        params:
+          path: git-kubo-deployment
+          status: failure
   - aggregate:
     - put: s3-bosh-creds
       params:
@@ -115,6 +132,7 @@ jobs:
   plan:
   - aggregate:
     - get: kubo-lock
+      version: every
       trigger: true
       passed: [ 'install-bosh' ]
     - get: git-kubo-deployment
@@ -128,13 +146,19 @@ jobs:
     params:
       ROUTING_CF_CLIENT_SECRET: {{routing_cf_client_secret}}
     on_failure:
-      put: slack-alert
-      params:
-        silent: true
-        icon_emoji: ":thumbsdown:"
-        text: |
-          Deploy K8s failed:
-          https://p-concourse.sys.main.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      aggregate:
+      - put: slack-alert
+        params:
+          silent: true
+          icon_emoji: ":thumbsdown:"
+          text: |
+            Deploy K8s failed:
+            https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      - put: git-kubo-deployment
+        params:
+          path: git-kubo-deployment
+          status: failure
+
   - aggregate:
     - put: s3-service-creds
       params:
@@ -144,6 +168,7 @@ jobs:
   plan:
   - aggregate:
     - get: kubo-lock
+      version: every
       trigger: true
       passed: [ 'deploy-k8s' ]
     - get: git-kubo-deployment
@@ -155,18 +180,24 @@ jobs:
   - task: workload
     file: git-kubo-deployment/ci/tasks/deploy-k8s-workload.yml
     on_failure:
-      put: slack-alert
-      params:
-        silent: true
-        icon_emoji: ":thumbsdown:"
-        text: |
-          Deploy K8s Workload failed:
-          https://p-concourse.sys.main.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      aggregate:
+      - put: slack-alert
+        params:
+          silent: true
+          icon_emoji: ":thumbsdown:"
+          text: |
+            Deploy K8s Workload failed:
+            https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      - put: git-kubo-deployment
+        params:
+          path: git-kubo-deployment
+          status: failure
 
 - name: destroy-k8s
   plan:
   - aggregate:
     - get: kubo-lock
+      version: every
       trigger: true
       passed: [ 'deploy-workload' ]
     - get: git-kubo-deployment
@@ -176,13 +207,18 @@ jobs:
   - task: destroy-k8s
     file: git-kubo-deployment/ci/tasks/destroy-k8s-instance.yml
     on_failure:
-      put: slack-alert
-      params:
-        silent: true
-        icon_emoji: ":thumbsdown:"
-        text: |
-          Destroy K8s failed:
-          https://p-concourse.sys.main.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      aggregate:
+      - put: slack-alert
+        params:
+          silent: true
+          icon_emoji: ":thumbsdown:"
+          text: |
+            Destroy K8s failed:
+            https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      - put: git-kubo-deployment
+        params:
+          path: git-kubo-deployment
+          status: failure
 
 
 - name: destroy-bosh
@@ -191,6 +227,7 @@ jobs:
     - get: git-kubo-deployment
       passed: [ 'destroy-k8s' ]
     - get: kubo-lock
+      version: every
       trigger: true
       passed: [ 'destroy-k8s' ]
     - get: s3-bosh-creds
@@ -202,13 +239,18 @@ jobs:
     params:
       GCP_SERVICE_ACCOUNT: {{gcp-service-account}}
     on_failure:
-      put: slack-alert
-      params:
-        silent: true
-        icon_emoji: ":thumbsdown:"
-        text: |
-          Destroy BOSH failed:
-          https://p-concourse.sys.main.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      aggregate:
+      - put: slack-alert
+        params:
+          silent: true
+          icon_emoji: ":thumbsdown:"
+          text: |
+            Destroy BOSH failed:
+            https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      - put: git-kubo-deployment
+        params:
+          path: git-kubo-deployment
+          status: failure
   - put: kubo-lock
     params: { release: kubo-lock }
   - put: slack-alert
@@ -218,3 +260,7 @@ jobs:
       text: |
         I am green and it'll do fine, it's beautiful
         And I think it's what I want to be
+  - put: git-kubo-deployment
+    params:
+      path: git-kubo-deployment
+      status: success
