--- a/ci/kubo-deployment.yml
+++ b/ci/kubo-deployment.yml
@@ -83,6 +83,7 @@ jobs:
   - get: git-kubo-release
     passed: [ 'claim-lock' ]
   - get: kubo-lock
+    version: every
     trigger: true
     passed: [ 'claim-lock' ]
   - task: install
@@ -109,6 +110,7 @@ jobs:
   plan:
   - aggregate:
     - get: kubo-lock
+      version: every
       trigger: true
       passed: [ 'install-bosh' ]
     - get: git-kubo-deployment
@@ -138,6 +140,7 @@ jobs:
   plan:
   - aggregate:
     - get: kubo-lock
+      version: every
       trigger: true
       passed: [ 'deploy-k8s' ]
     - get: git-kubo-deployment
@@ -161,6 +164,7 @@ jobs:
   plan:
   - aggregate:
     - get: kubo-lock
+      version: every
       trigger: true
       passed: [ 'deploy-workload' ]
     - get: git-kubo-deployment
@@ -185,6 +189,7 @@ jobs:
     - get: git-kubo-deployment
       passed: [ 'destroy-k8s' ]
     - get: kubo-lock
+      version: every
       trigger: true
       passed: [ 'destroy-k8s' ]
     - get: s3-bosh-creds
