--- a/ci/kubo-deployment-pr.yml
+++ b/ci/kubo-deployment-pr.yml
@@ -109,13 +109,19 @@ jobs:
       GCP_SERVICE_ACCOUNT: {{gcp-service-account}}
     on_failure:
       aggregate:
-      - put: slack-alert
-        params:
-          silent: true
-          icon_emoji: ":thumbsdown:"
-          text: |
-            Deploy BOSH failed:
-            https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      - do:
+        - task: alert-text
+          file: git-kubo-deployment/ci/tasks/generate-deployment-pr-messages.yml
+          params:
+            PR_STATUS: failed
+        - put: slack-alert
+          params:
+            silent: true
+            icon_emoji: ":animal:"
+            text_file: pr-slack-message/message.txt
+            text: |
+              $TEXT_FILE_CONTENT
+              https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
       - put: git-kubo-deployment
         params:
           path: git-kubo-deployment
@@ -147,13 +153,19 @@ jobs:
       ROUTING_CF_CLIENT_SECRET: {{routing_cf_client_secret}}
     on_failure:
       aggregate:
-      - put: slack-alert
-        params:
-          silent: true
-          icon_emoji: ":thumbsdown:"
-          text: |
-            Deploy K8s failed:
-            https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      - do:
+        - task: alert-text
+          file: git-kubo-deployment/ci/tasks/generate-deployment-pr-messages.yml
+          params:
+            PR_STATUS: failed
+        - put: slack-alert
+          params:
+            silent: true
+            icon_emoji: ":animal:"
+            text_file: pr-slack-message/message.txt
+            text: |
+              $TEXT_FILE_CONTENT
+              https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
       - put: git-kubo-deployment
         params:
           path: git-kubo-deployment
@@ -181,13 +193,19 @@ jobs:
     file: git-kubo-deployment/ci/tasks/deploy-k8s-workload.yml
     on_failure:
       aggregate:
-      - put: slack-alert
-        params:
-          silent: true
-          icon_emoji: ":thumbsdown:"
-          text: |
-            Deploy K8s Workload failed:
-            https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      - do:
+        - task: alert-text
+          file: git-kubo-deployment/ci/tasks/generate-deployment-pr-messages.yml
+          params:
+            PR_STATUS: failed
+        - put: slack-alert
+          params:
+            silent: true
+            icon_emoji: ":animal:"
+            text_file: pr-slack-message/message.txt
+            text: |
+              $TEXT_FILE_CONTENT
+              https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
       - put: git-kubo-deployment
         params:
           path: git-kubo-deployment
@@ -208,13 +226,19 @@ jobs:
     file: git-kubo-deployment/ci/tasks/destroy-k8s-instance.yml
     on_failure:
       aggregate:
-      - put: slack-alert
-        params:
-          silent: true
-          icon_emoji: ":thumbsdown:"
-          text: |
-            Destroy K8s failed:
-            https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      - do:
+        - task: alert-text
+          file: git-kubo-deployment/ci/tasks/generate-deployment-pr-messages.yml
+          params:
+            PR_STATUS: failed
+        - put: slack-alert
+          params:
+            silent: true
+            icon_emoji: ":animal:"
+            text_file: pr-slack-message/message.txt
+            text: |
+              $TEXT_FILE_CONTENT
+              https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
       - put: git-kubo-deployment
         params:
           path: git-kubo-deployment
@@ -240,26 +264,34 @@ jobs:
       GCP_SERVICE_ACCOUNT: {{gcp-service-account}}
     on_failure:
       aggregate:
-      - put: slack-alert
-        params:
-          silent: true
-          icon_emoji: ":thumbsdown:"
-          text: |
-            Destroy BOSH failed:
-            https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+      - do:
+        - task: alert-text
+          file: git-kubo-deployment/ci/tasks/generate-deployment-pr-messages.yml
+          params:
+            PR_STATUS: failed
+        - put: slack-alert
+          params:
+            silent: true
+            icon_emoji: ":animal:"
+            text_file: pr-slack-message/message.txt
+            text: |
+              $TEXT_FILE_CONTENT
+              https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
       - put: git-kubo-deployment
         params:
           path: git-kubo-deployment
           status: failure
   - put: kubo-lock
     params: { release: kubo-lock }
+  - task: alert-text
+    file: git-kubo-deployment/ci/tasks/generate-deployment-pr-messages.yml
+    params:
+      PR_STATUS: succeeded
   - put: slack-alert
     params:
       silent: true
-      icon_emoji: ":frog:"
-      text: |
-        I am green and it'll do fine, it's beautiful
-        And I think it's what I want to be
+      icon_emoji: ":bulbasaur:"
+      text_file: pr-slack-message/message.txt
   - put: git-kubo-deployment
     params:
       path: git-kubo-deployment
