--- a/ci/kubo-deployment-current-branch.yml
+++ b/ci/kubo-deployment-current-branch.yml
@@ -113,6 +113,8 @@ jobs:
     - get: git-kubo-deployment
     - get: git-kubo-release
       passed: [ 'install-bosh' ]
+    - get: s3-bosh-state
+      passed: [ 'install-bosh' ]
     - get: s3-bosh-creds
       passed: [ 'install-bosh' ]
   - task: deploy
@@ -140,6 +142,8 @@ jobs:
       trigger: true
       passed: [ 'deploy-k8s' ]
     - get: git-kubo-deployment
+    - get: s3-bosh-state
+      passed: [ 'deploy-k8s' ]
     - get: s3-bosh-creds
       passed: [ 'deploy-k8s' ]
     - get: s3-service-creds
@@ -163,6 +167,8 @@ jobs:
       trigger: true
       passed: [ 'deploy-workload' ]
     - get: git-kubo-deployment
+    - get: s3-bosh-state
+      passed: [ 'deploy-workload' ]
     - get: s3-bosh-creds
       passed: [ 'deploy-workload' ]
   - task: destroy-k8s
@@ -185,10 +191,10 @@ jobs:
       version: every
       trigger: true
       passed: [ 'destroy-k8s' ]
+    - get: s3-bosh-state
+      passed: [ 'destroy-k8s' ]
     - get: s3-bosh-creds
       passed: [ 'destroy-k8s' ]
-    - get: s3-bosh-state
-      passed: [ 'install-bosh' ]
   - task: destroy
     file: git-kubo-deployment/ci/tasks/destroy-bosh.yml
     params:
