--- a/ci/kubo-release-pr.yml
+++ b/ci/kubo-release-pr.yml
@@ -144,6 +144,8 @@ jobs:
       passed: [ 'install-bosh' ]
     - get: git-kubo-release
       passed: [ 'install-bosh' ]
+    - get: s3-bosh-state
+      passed: [ 'install-bosh' ]
     - get: s3-bosh-creds
       passed: [ 'install-bosh' ]
   - task: deploy
@@ -183,6 +185,8 @@ jobs:
       passed: [ 'deploy-k8s' ]
     - get: git-kubo-deployment
       passed: [ 'deploy-k8s' ]
+    - get: s3-bosh-state
+      passed: [ 'deploy-k8s' ]
     - get: s3-bosh-creds
       passed: [ 'deploy-k8s' ]
     - get: s3-service-creds
@@ -220,6 +224,8 @@ jobs:
       passed: [ 'deploy-workload' ]
     - get: git-kubo-deployment
       passed: [ 'deploy-workload' ]
+    - get: s3-bosh-state
+      passed: [ 'deploy-workload' ]
     - get: s3-bosh-creds
       passed: [ 'deploy-workload' ]
     - get: git-kubo-release
@@ -256,10 +262,10 @@ jobs:
       trigger: true
       version: every
       passed: [ 'destroy-k8s' ]
+    - get: s3-bosh-state
+      passed: [ 'destroy-k8s' ]
     - get: s3-bosh-creds
       passed: [ 'destroy-k8s' ]
-    - get: s3-bosh-state
-      passed: [ 'install-bosh' ]
     - get: git-kubo-release
       passed: [ 'install-bosh' ]
   - task: destroy
