--- a/ci/kubo-deployment.yml
+++ b/ci/kubo-deployment.yml
@@ -69,6 +69,16 @@ resources:
     region_name: eu-west-1
     versioned_file: kubo-release-latest.tgz
 
+- name: kubo-version
+  type: semver
+  source:
+    key: kubo-version
+    access_key_id: {{aws-access-key-id}}
+    secret_access_key: {{aws-secret-access-key}}
+    bucket: kubo-pipeline
+    endpoint: s3-eu-west-1.amazonaws.com
+    region_name: eu-west-1
+
 - name: slack-alert
   type: slack-notification
   source:
@@ -83,8 +93,12 @@ jobs:
       trigger: true
     - get: git-kubo-deployment
       trigger: true
+    - get: kubo-version
   - put: kubo-lock
     params: { acquire: true }
+  - put: kubo-version
+    params:
+      pre: dev
 
 - name: install-bosh
   plan:
@@ -95,6 +109,8 @@ jobs:
   - get: kubo-lock
     version: every
     trigger: true
+    passed: [ 'claim-lock' ]
+  - get: kubo-version
     passed: [ 'claim-lock' ]
   - task: install
     file: git-kubo-deployment/ci/tasks/install-bosh.yml
@@ -127,10 +143,22 @@ jobs:
       passed: [ 'install-bosh' ]
     - get: git-kubo-release
       passed: [ 'install-bosh' ]
+    - get: kubo-version
+      passed: [ 'install-bosh' ]
     - get: s3-bosh-state
       passed: [ 'install-bosh' ]
     - get: s3-bosh-creds
       passed: [ 'install-bosh' ]
+  - task: build-kubo-release
+    file: git-kubo-deployment/ci/tasks/build-kubo-release.yml
+    on_failure:
+      put: slack-alert
+      params:
+        silent: true
+        icon_emoji: ":thumbsdown:"
+        text: |
+          Kubo release build failed:
+          https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
   - task: deploy
     file: git-kubo-deployment/ci/tasks/deploy-k8s-instance.yml
     params:
@@ -143,10 +171,9 @@ jobs:
         text: |
           Deploy K8s failed:
           https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
-  - aggregate:
-    - put: s3-service-creds
-      params:
-        file: service-creds/service-ci-service-creds.yml
+  - put: s3-service-creds
+    params:
+      file: service-creds/service-ci-service-creds.yml
 
 - name: deploy-workload
   plan:
@@ -160,6 +187,10 @@ jobs:
     - get: s3-bosh-state
       passed: [ 'deploy-k8s' ]
     - get: s3-bosh-creds
+      passed: [ 'deploy-k8s' ]
+    - get: kubo-version
+      passed: [ 'deploy-k8s' ]
+    - get: git-kubo-release
       passed: [ 'deploy-k8s' ]
     - get: s3-service-creds
       passed: [ 'deploy-k8s' ]
@@ -180,6 +211,10 @@ jobs:
     - get: kubo-lock
       version: every
       trigger: true
+      passed: [ 'deploy-workload' ]
+    - get: kubo-version
+      passed: [ 'deploy-workload' ]
+    - get: git-kubo-release
       passed: [ 'deploy-workload' ]
     - get: git-kubo-deployment
       passed: [ 'deploy-workload' ]
@@ -208,6 +243,10 @@ jobs:
       version: every
       trigger: true
       passed: [ 'destroy-k8s' ]
+    - get: kubo-version
+      passed: [ 'destroy-k8s' ]
+    - get: git-kubo-release
+      passed: [ 'destroy-k8s' ]
     - get: s3-bosh-state
       passed: [ 'destroy-k8s' ]
     - get: s3-bosh-creds
@@ -224,36 +263,35 @@ jobs:
         text: |
           Destroy BOSH failed:
           https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+  - put: kubo-lock
+    params: { release: kubo-lock }
 
 - name: upload-kubo-release
   plan:
   - aggregate:
-    - get: kubo-lock
-      version: every
+    - get: git-kubo-deployment
       trigger: true
       passed: [ 'destroy-bosh' ]
-    - get: git-kubo-deployment
+    - get: kubo-version
       passed: [ 'destroy-bosh' ]
     - get: s3-bosh-creds
       passed: [ 'destroy-bosh' ]
     - get: git-kubo-release
-      passed: [ 'deploy-k8s' ]
-  - task: upload
-    file: git-kubo-deployment/ci/tasks/upload-kubo-release-tarball.yml
+      passed: [ 'destroy-bosh' ]
+  - task: build-kubo-release
+    file: git-kubo-deployment/ci/tasks/build-kubo-release.yml
     on_failure:
       put: slack-alert
       params:
         silent: true
         icon_emoji: ":thumbsdown:"
         text: |
-          Destroy BOSH failed:
+          Kubo release build failed:
           https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
   - aggregate:
     - put: s3-kubo-release-tarball
       params:
-        file: kubo-release-latest.tgz
-  - put: kubo-lock
-    params: { release: kubo-lock }
+        file: kubo-release/kubo-release-*.tgz
   - put: slack-alert
     params:
       silent: true
