--- a/ci/tasks/deploy-k8s-instance.yml
+++ b/ci/tasks/deploy-k8s-instance.yml
@@ -10,6 +10,7 @@ run:
   path: git-kubo-deployment/ci/scripts/deploy-k8s-instance.sh
 
 inputs:
+  - name: kubo-release
   - name: git-kubo-deployment
   - name: s3-bosh-creds
   - name: kubo-lock
