--- a/ci/kubo-deployment-current-branch.yml
+++ b/ci/kubo-deployment-current-branch.yml
@@ -69,6 +69,16 @@ resources:
     region_name: eu-west-1
     versioned_file: kubo-release-latest.tgz
 
+- name: s3-kubo-release-tarball-tmp
+  type: s3
+  source:
+    access_key_id: {{aws-access-key-id}}
+    secret_access_key: {{aws-secret-access-key}}
+    bucket: kubo-pipeline
+    endpoint: s3-eu-west-1.amazonaws.com
+    region_name: eu-west-1
+    versioned_file: kubo-release-latest.tgz
+
 - name: kubo-version
   type: semver
   source:
@@ -128,7 +138,7 @@ jobs:
       params:
         file: bosh-state/state.json
 
-- name: deploy-k8s
+- name: upload-kubo-release-tmp
   plan:
   - aggregate:
     - get: kubo-lock
@@ -136,13 +146,11 @@ jobs:
       trigger: true
       passed: [ 'install-bosh' ]
     - get: git-kubo-deployment
-    - get: git-kubo-release
+      trigger: true
       passed: [ 'install-bosh' ]
     - get: kubo-version
       passed: [ 'install-bosh' ]
-    - get: s3-bosh-state
-      passed: [ 'install-bosh' ]
-    - get: s3-bosh-creds
+    - get: git-kubo-release
       passed: [ 'install-bosh' ]
   - task: build-kubo-release
     file: git-kubo-deployment/ci/tasks/build-kubo-release.yml
@@ -150,10 +158,39 @@ jobs:
       put: slack-alert
       params:
         silent: true
-        icon_emoji: ":octopus:"
+        icon_emoji: ":thumbsdown:"
         text: |
           Kubo release build failed:
           https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
+  - aggregate:
+    - put: s3-kubo-release-tarball-tmp
+      params:
+        file: kubo-release/kubo-release-*.tgz
+  - put: slack-alert
+    params:
+      silent: true
+      icon_emoji: ":chameleon:"
+      text: |
+        kubo-deployment Hypeline on branch {{branch-name}} is ready
+
+- name: deploy-k8s
+  plan:
+  - aggregate:
+    - get: kubo-lock
+      version: every
+      trigger: true
+      passed: [ 'upload-kubo-release-tmp' ]
+    - get: git-kubo-deployment
+    - get: git-kubo-release
+      passed: [ 'upload-kubo-release-tmp' ]
+    - get: kubo-version
+      passed: [ 'upload-kubo-release-tmp' ]
+    - get: s3-bosh-state
+      passed: [ 'install-bosh' ]
+    - get: s3-bosh-creds
+      passed: [ 'install-bosh' ]
+    - get: s3-kubo-release-tarball-tmp
+      passed: [ 'upload-kubo-release-tmp' ]
   - task: deploy
     file: git-kubo-deployment/ci/tasks/deploy-k8s-instance.yml
     params:
