Move all buckets to the same region and account
[#140558683]

Signed-off-by: Konstantin Semenov <ksemenov@pivotal.io>

--- a/ci/kubo-deployment-current-branch.yml
+++ b/ci/kubo-deployment-current-branch.yml
@@ -34,7 +34,7 @@ resources:
   source:
     access_key_id: {{aws-access-key-id}}
     secret_access_key: {{aws-secret-access-key}}
-    bucket: kubo-pipeline
+    bucket: kubo-pipeline-store
     endpoint: s3-eu-west-1.amazonaws.com
     region_name: eu-west-1
     versioned_file: bosh/state.json
@@ -44,7 +44,7 @@ resources:
   source:
     access_key_id: {{aws-access-key-id}}
     secret_access_key: {{aws-secret-access-key}}
-    bucket: kubo-pipeline
+    bucket: kubo-pipeline-store
     endpoint: s3-eu-west-1.amazonaws.com
     region_name: eu-west-1
     versioned_file: bosh/creds.yml
@@ -54,7 +54,7 @@ resources:
   source:
     access_key_id: {{aws-access-key-id}}
     secret_access_key: {{aws-secret-access-key}}
-    bucket: kubo-pipeline
+    bucket: kubo-pipeline-store
     endpoint: s3-eu-west-1.amazonaws.com
     region_name: eu-west-1
     versioned_file: bosh/service-ci-service-creds.yml
@@ -74,7 +74,7 @@ resources:
   source:
     access_key_id: {{aws-access-key-id}}
     secret_access_key: {{aws-secret-access-key}}
-    bucket: kubo-pipeline
+    bucket: kubo-pipeline-store
     endpoint: s3-eu-west-1.amazonaws.com
     region_name: eu-west-1
     versioned_file: kubo-release-latest.tgz
@@ -85,7 +85,7 @@ resources:
     key: kubo-version
     access_key_id: {{aws-access-key-id}}
     secret_access_key: {{aws-secret-access-key}}
-    bucket: kubo-pipeline
+    bucket: kubo-pipeline-store
     endpoint: s3-eu-west-1.amazonaws.com
     region_name: eu-west-1
 
