--- a/ci/kubo-deployment-current-branch.yml
+++ b/ci/kubo-deployment-current-branch.yml
@@ -77,7 +77,17 @@ resources:
     bucket: kubo-pipeline-store
     endpoint: s3-eu-west-1.amazonaws.com
     region_name: eu-west-1
-    versioned_file: kubo-release-latest.tgz
+    regexp: kubo-release-(.*).tgz
+
+- name: s3-kubo-releases
+  type: s3
+  source:
+    access_key_id: {{aws-access-key-id}}
+    secret_access_key: {{aws-secret-access-key}}
+    bucket: kubo-releases
+    endpoint: s3-eu-west-1.amazonaws.com
+    region_name: eu-west-1
+    regexp: kubo-release-(.*).tgz
 
 - name: kubo-version
   type: semver
@@ -138,7 +148,7 @@ jobs:
       params:
         file: bosh-state/state.json
 
-- name: upload-kubo-release-tmp
+- name: build-kubo-release
   plan:
   - aggregate:
     - get: kubo-lock
@@ -152,6 +162,10 @@ jobs:
       passed: [ 'install-bosh' ]
     - get: git-kubo-release
       passed: [ 'install-bosh' ]
+    - put: s3-bosh-creds
+      passed: [ 'install-bosh' ]
+    - put: s3-bosh-state
+      passed: [ 'install-bosh' ]
   - task: build-kubo-release
     file: git-kubo-deployment/ci/tasks/build-kubo-release.yml
     on_failure:
@@ -162,10 +176,9 @@ jobs:
         text: |
           Kubo release build failed:
           https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
-  - aggregate:
-    - put: s3-kubo-release-tarball-tmp
-      params:
-        file: kubo-release/kubo-release-*.tgz
+  - put: s3-kubo-release-tarball-tmp
+    params:
+      file: kubo-release/kubo-release-*.tgz
   - put: slack-alert
     params:
       silent: true
@@ -179,18 +192,18 @@ jobs:
     - get: kubo-lock
       version: every
       trigger: true
-      passed: [ 'upload-kubo-release-tmp' ]
+      passed: [ 'build-kubo-release' ]
     - get: git-kubo-deployment
     - get: git-kubo-release
-      passed: [ 'upload-kubo-release-tmp' ]
+      passed: [ 'build-kubo-release' ]
     - get: kubo-version
-      passed: [ 'upload-kubo-release-tmp' ]
+      passed: [ 'build-kubo-release' ]
     - get: s3-bosh-state
-      passed: [ 'install-bosh' ]
+      passed: [ 'build-kubo-release' ]
     - get: s3-bosh-creds
-      passed: [ 'install-bosh' ]
+      passed: [ 'build-kubo-release' ]
     - get: s3-kubo-release-tarball-tmp
-      passed: [ 'upload-kubo-release-tmp' ]
+      passed: [ 'build-kubo-release' ]
   - task: deploy
     file: git-kubo-deployment/ci/tasks/deploy-k8s-instance.yml
     params:
@@ -225,6 +238,8 @@ jobs:
       passed: [ 'deploy-k8s' ]
     - get: s3-service-creds
       passed: [ 'deploy-k8s' ]
+    - get: s3-kubo-release-tarball-tmp
+      passed: [ 'deploy-k8s' ]
   - task: workload
     file: git-kubo-deployment/ci/tasks/deploy-k8s-workload.yml
     on_failure:
@@ -251,6 +266,8 @@ jobs:
     - get: s3-bosh-state
       passed: [ 'deploy-workload' ]
     - get: s3-bosh-creds
+      passed: [ 'deploy-workload' ]
+    - get: s3-kubo-release-tarball-tmp
       passed: [ 'deploy-workload' ]
   - task: destroy-k8s
     file: git-kubo-deployment/ci/tasks/destroy-k8s-instance.yml
@@ -280,6 +297,8 @@ jobs:
       passed: [ 'destroy-k8s' ]
     - get: s3-bosh-creds
       passed: [ 'destroy-k8s' ]
+    - get: s3-kubo-release-tarball-tmp
+      passed: [ 'destroy-k8s' ]
   - task: destroy
     file: git-kubo-deployment/ci/tasks/destroy-bosh.yml
     params:
@@ -307,6 +326,8 @@ jobs:
       passed: [ 'destroy-bosh' ]
     - get: git-kubo-release
       passed: [ 'destroy-bosh' ]
+    - get: s3-kubo-release-tarball-tmp
+      passed: [ 'destroy-bosh' ]
   - task: build-kubo-release
     file: git-kubo-deployment/ci/tasks/build-kubo-release.yml
     on_failure:
@@ -317,10 +338,9 @@ jobs:
         text: |
           Kubo release build failed:
           https://p-concourse.kubo.cf-app.com/teams/$BUILD_TEAM_NAME/pipelines/$BUILD_PIPELINE_NAME/jobs/$BUILD_JOB_NAME/builds/$BUILD_NAME
-  - aggregate:
-    - put: s3-kubo-release-tarball
-      params:
-        file: kubo-release/kubo-release-*.tgz
+  - put: s3-kubo-release-tarball
+    params:
+      file: s3-kubo-release-tarball-tmp/kubo-release-*.tgz
   - put: slack-alert
     params:
       silent: true
