Use version name when copying file [#140558683]

--- a/ci/tasks/deploy-k8s-instance.yml
+++ b/ci/tasks/deploy-k8s-instance.yml
@@ -14,5 +14,6 @@ inputs:
   - name: git-kubo-deployment
   - name: s3-bosh-creds
   - name: kubo-lock
+  - name: kubo-version
 outputs:
   - name: service-creds
